2003-07-11 Peter Bienstman  <Peter.Bienstman@ugent.be>

	* generalslab.cpp: Relax tolerance on remove_copies.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Constructors for series solver.
	* generalslab.cpp: Ditto.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Make disc_intersect const.
	* generalslab.cpp: Ditto.

2002-12-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Break out signed_sqrt to slabmode.

2002-12-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Apply signed_sqrt to kz, not to cos.

2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add eps_avg.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Rename left/right to lower/upper.
	* generalslab.h: Ditto.

2002-09-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmatrixcache.h: Refactor to be useful in Section.
	* slabmatrixcache.cpp: Ditto.
	* generalslab.h: Ditto.
	* generalslab.cpp: Ditto.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Major change in the way PML is defined.
	* generalslab.cpp: Ditto.

2002-06-03 Lieven Vanholme <Lieven.Vanholme@rug.ac.be>

	* generalslab.h: Support for expanding arbitrary functions in
                         eigenmodes.
	* generalslab.cpp: Ditto.

2002-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add get_imag_start_thickness.
	* generalslab.cpp: Fix SlabFlux for PML case.

2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Improve portability.
	* generalslab.h: Ditto.
	* slabmatrixcache.cpp: Ditto.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Change branch cut.

2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Update support for parameter getting/setting.

2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add support for slab matrix cache.