@@ -1,3 +1,8 @@
+2003-11-14 Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* generalslab.h: Add add_kz2_estimate.
+	* generalslab.cpp: Ditto.
+
 2003-07-11 Peter Bienstman  <Peter.Bienstman@ugent.be>
 
 	* generalslab.cpp: Relax tolerance on remove_copies.
